Fix broken category

--- a/content/post/2006/08/2006-08-09-its-alive.md
+++ b/content/post/2006/08/2006-08-09-its-alive.md
@@ -4,7 +4,7 @@ date: "2006-08-09"
 category:
   - "clerical"
   - "code"
-  - "m"
+  - windows
 ---
 
 I've just published the first release of a little application I wrote to manage the list of internal extension & direct dial numbers of staff here at the VDA.
